# cronos-celerity

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: benchmark.cpp
configuration/: shock-tube-amr.toml  shock-tube-benchmark-large.toml  shock-tube-benchmark.toml  shock-tube-integration.toml
src/: main-celerity.cpp  main-sycl.cpp  main.cpp
src/amr/: amr-node.h  amr-parameters.h  amr-solver.h  error-estimation.h  flags.cpp  flags.h  grid-boundary.cpp  grid-boundary.h  refinement.h
src/boundary/: boundary-types.h  boundary.cpp  boundary.h  extrapolate.cpp  extrapolate.h  outflow.cpp  outflow.h
src/configuration/: problem.h  shock-tube.cpp  shock-tube.h
src/data-types/: face-values.h  faces.h  fields.h  phys-values.h
src/field-wrapper/: face-values.h  fields.h  num-values.h  phys-fields.h  phys-values.h
src/grid/: base-grid.h  grid-functions.cpp  grid-functions.h  padded-grid.cpp  padded-grid.h  simple-grid.cpp  simple-grid.h  utils.h
src/misc/: constants.h  direction.h  phys-fields.h  transformations.cpp  transformations.h
src/parameters/: problem.cpp  problem.h
src/reconstruction/: reconstruction.cpp  reconstruction.h
src/riemann/: reconstruction.cpp  reconstruction.h  riemann-solver.cpp  riemann-solver.h
src/runge-kutta-solver/: runge-kutta-solver.cpp  runge-kutta-solver.h
src/solver/: base-solver.h  runge-kutta-celerity-solver.h  runge-kutta-solver.cpp  runge-kutta-solver.h  runge-kutta-sycl-solver.h  simple-solver.cpp  simple-solver.h
src/sycl/: reduction.h
src/transformation/: transformations.cpp  transformations.h
src/user-interface/: config-parser.cpp  config-parser.h  run.h  value-parser.cpp  value-parser.h
test/: test.cpp
